feat: enhance security with JWT, rate limiting, and caching
- Implement stateless JWT authentication
- Add Redis rate limiting for auth and public APIs
- Add Redis caching for FoodService and Dashboard
- Fix Veg/Non-Veg filter logic and enum JSON mapping
- Enhance exception handling and monitoring with Actuator